--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@ padding-top: 3rem;
 }
 
 .head2 {
-  background-color: #1e1e1e;
-  color: rgba(255, 255, 255, 0.8);
-  width: 100%;
+  background-color: #1e1e1e !important;
+  color: rgba(255, 255, 255, 0.8) !important;
+  width: 100% !important;
   /* align-items: center; */
-  text-align: center;
-  justify-content: center;
-  font-family: Avenir;
-font-size: 16px;
-margin-top: 2rem;
-font-weight: 400;
-height: 20rem;
-line-height: 35px;
-margin-bottom: 0;
-letter-spacing: 0em;
-padding-top: 1rem;
+  text-align: center !important;
+  justify-content: center !important;
+  font-family: Avenir !important;
+font-size: 16px !important;
+margin-top: 2rem !important;
+font-weight: 400 !important;
+height: 20rem !important;
+line-height: 35px !important;
+margin-bottom: 0 !important;
+letter-spacing: 0em !important;
+padding-top: 1rem !important;
 }
 
 .head1{
@@ -115,9 +115,9 @@ padding-top: 1rem;
 }
 
 .vastimage {
-        position: absolute;
-        right: 0rem;
-        z-index: 1;
+        position: absolute !important;
+        right: 0rem !important;
+        z-index: 1 !important;
       }
 
     </style>
@@ -167,7 +167,7 @@ padding-top: 1rem;
         <img  src="https://res.cloudinary.com/vast/image/upload/v1664496768/Layer_x0020_1_volof3.png"/> 
        </td>
         <tr class="vast">
-           <img class="vastimage" src="https://res.cloudinary.com/vast/image/upload/v1664521231/ooorganize_1_vbia66.png" /> 
+           <!-- <img class="vastimage" src="https://res.cloudinary.com/vast/image/upload/v1664521231/ooorganize_1_vbia66.png" />  -->
          <td>
             PROHUB, Salawu Olabode Avenue,<br />
             Idi-aba, Road, Abeokuta, Nigeria<br/>
@@ -181,6 +181,7 @@ padding-top: 1rem;
             href="https://www.twitter.com/usevastapp?s=21&t=PMg2OfFx3RXIGIxyuOecVQ"
             ><img src="https://res.cloudinary.com/vast/image/upload/v1664496768/ant-design_twitter-circle-filled_toyy00.png"
           />
+          
         </a>
         <a
           href="https://www.linkedin.com/company/usevastapp/"
